--- a/app/src/main/res/layout/fragment_onboarding_tiga.xml
+++ b/app/src/main/res/layout/fragment_onboarding_tiga.xml
@@ -3,71 +3,77 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".boading.OnboardingTiga">
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
 
-    <!-- TODO: Update blank fragment layout -->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <!-- TODO: Update blank fragment layout -->
 
 
-    <ImageView
-        android:id="@+id/iv_keluarbarang"
-        android:layout_width="200dp"
-        android:layout_height="177dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/ic_undraw_on_the_way_ldaq"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <ImageView
+                android:id="@+id/iv_keluarbarang"
+                android:layout_width="200dp"
+                android:layout_height="177dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginEnd="16dp"
+                android:src="@drawable/ic_undraw_on_the_way_ldaq"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_csribarang"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/Keluar"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_keluarbarang" />
+            <TextView
+                android:id="@+id/tv_csribarang"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/Keluar"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/iv_keluarbarang" />
 
-    <TextView
-        android:id="@+id/tv_kalimattiga"
-        android:layout_width="170dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="@string/memudahkan_petugas_logistik_untuk_melakukan_pencarian_barang"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_csribarang" />
+            <TextView
+                android:id="@+id/tv_kalimattiga"
+                android:layout_width="170dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="@string/memudahkan_petugas_logistik_untuk_melakukan_pencarian_barang"
+                android:textAlignment="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_csribarang" />
 
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:src="@drawable/ic_group_tiga"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_kalimattiga" />
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:src="@drawable/ic_group_tiga"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_kalimattiga" />
 
-    <Button
-        android:id="@+id/btn_nexttiga"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:background="@drawable/custom_button_2"
-        android:shadowColor="@color/design_default_color_primary"
-        android:text="@string/btn_keluar"
-        android:textColor="@color/colorAccent"
-        android:textColorHighlight="@color/colorPrimaryDark"
-        android:textColorHint="@color/colorAccent"
-        app:layout_constraintEnd_toEndOf="@+id/tv_kalimattiga"
-        app:layout_constraintStart_toStartOf="@+id/tv_kalimattiga"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <Button
+                android:id="@+id/btn_nexttiga"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:background="@drawable/custom_button_2"
+                android:shadowColor="@color/design_default_color_primary"
+                android:text="@string/btn_keluar"
+                android:textColor="@color/colorAccent"
+                android:textColorHighlight="@color/colorPrimaryDark"
+                android:textColorHint="@color/colorAccent"
+                app:layout_constraintEnd_toEndOf="@+id/tv_kalimattiga"
+                app:layout_constraintStart_toStartOf="@+id/tv_kalimattiga"
+                app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </layout>
