--- a/app/src/main/res/layout/activity_tambah_data.xml
+++ b/app/src/main/res/layout/activity_tambah_data.xml
@@ -14,7 +14,7 @@
             android:layout_height="wrap_content">
 
             <EditText
-                android:id="@+id/inp_nama_barang"
+                android:id="@+id/tv_hasil_nama_find"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
@@ -28,7 +28,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/inp_jumlah_barang"
+                android:id="@+id/inp_jumlah_barang_find"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
@@ -39,10 +39,10 @@
                 android:inputType="textPersonName"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/inp_nama_barang" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_hasil_nama_find" />
 
             <EditText
-                android:id="@+id/inp_harga_barang"
+                android:id="@+id/inp_harga_barang_find"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
@@ -53,7 +53,7 @@
                 android:inputType="number"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/inp_jumlah_barang" />
+                app:layout_constraintTop_toBottomOf="@+id/inp_jumlah_barang_find" />
 
             <Button
                 android:id="@+id/bt_back_tambah_barang"
@@ -81,7 +81,7 @@
                 android:textColor="@color/colorPrimary"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_hasil_tanggal" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_hasil_tanggal_find" />
 
             <ImageView
                 android:id="@+id/tv_tanggal_pilihan"
@@ -103,10 +103,10 @@
                 android:text="@string/t_barang_masuk"
                 android:textSize="17sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/inp_harga_barang" />
+                app:layout_constraintTop_toBottomOf="@+id/inp_harga_barang_find" />
 
             <TextView
-                android:id="@+id/tv_hasil_tanggal"
+                android:id="@+id/tv_hasil_tanggal_find"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
