--- a/app/src/main/res/layout/activity_tambah_data.xml
+++ b/app/src/main/res/layout/activity_tambah_data.xml
@@ -111,6 +111,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:text="@string/t_tanggal_pilihan"
+                android:textColor="@android:color/holo_red_dark"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_tanggal_pilihan"
                 app:layout_constraintStart_toEndOf="@+id/tv_tanggal_pilihan"
                 app:layout_constraintTop_toTopOf="@+id/tv_tanggal_pilihan" />
