--- a/app/src/main/res/layout/activity_tambah_data.xml
+++ b/app/src/main/res/layout/activity_tambah_data.xml
@@ -60,28 +60,28 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
+                android:layout_marginBottom="16dp"
                 android:background="@drawable/custom_button"
                 android:text="@string/bt_kembali"
                 android:textColor="@android:color/holo_red_dark"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/bt_tambah_barang" />
+                app:layout_constraintStart_toStartOf="parent" />
 
             <Button
                 android:id="@+id/bt_tambah_barang"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="150dp"
                 android:layout_marginEnd="32dp"
+                android:layout_marginBottom="16dp"
                 android:background="@drawable/custom_button_2"
                 android:text="@string/bt_tambah"
                 android:textColor="@color/colorPrimary"
+                app:layout_constraintBottom_toTopOf="@+id/bt_back_tambah_barang"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_hasil_tanggal_find" />
+                app:layout_constraintStart_toStartOf="parent" />
 
             <ImageView
                 android:id="@+id/tv_tanggal_pilihan"
