--- a/app/src/main/res/layout/fragment_onboarding_tiga.xml
+++ b/app/src/main/res/layout/fragment_onboarding_tiga.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".boading.OnboardingTiga">
+    tools:context=".boarding.OnboardingTiga">
 
     <ScrollView
         android:layout_width="match_parent"
