--- a/app/src/main/res/layout/list_data_riwayat_peminjaman.xml
+++ b/app/src/main/res/layout/list_data_riwayat_peminjaman.xml
@@ -57,11 +57,11 @@
         android:id="@+id/bt_detail_riwayat_peminjaman"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_search_2"
+        app:srcCompat="@drawable/ic_detail"
         tools:ignore="VectorDrawableCompat" />
 
     <TextView
